libdrawkit/backend.h

#ifndef BACKEND_H
#define BACKEND_H

#include <GLES2/gl2.h>
#include <stdbool.h>
#include "structures.h"

bool dk_backend_init_default(dk_context *ctx);
bool dk_backend_init(dk_context *ctx, int projection_count);

void dk_backend_cleanup(dk_context *ctx);

void dk_set_bg_color(dk_context *ctx, dk_color color);

void dk_draw_rect(dk_context *ctx, int x, int y, int width, int height, dk_color color);
void dk_draw_rect_rounded(dk_context *ctx, float x, float y, float width, float height, float radius, dk_color color);
void dk_draw_circle(dk_context *ctx, int cx, int cy, int radius, dk_color color);
void dk_draw_texture(dk_context *ctx, GLuint texture_id, int x, int y, int width, int height);
void dk_draw_text(dk_context *ctx, const char *text, int x, int y, float font_size, dk_color color);


void dk_begin_group(dk_context *ctx, int group);
void dk_end_group(dk_context *ctx, int group);
void dk_group_matrix(dk_context *ctx, int group, float* mat);

void dk_begin_frame(dk_context *ctx);
void dk_end_frame();

#endif